--- a/src/Styles/StyleTerapias.css
+++ b/src/Styles/StyleTerapias.css
@@ -8,7 +8,7 @@
 }
 
 .terapiasIntro{
-    width: 95%;
+    width: 88%;
     font-size: 1.2vw;
     font-weight: 300;
 }
@@ -40,14 +40,6 @@
     pointer-events: none;
 }
 
-
-
-/* .slick-slide{
-    border: #013b23 solid 2px !important;
-    width: 296px !important;
-    margin: 0 12px !important;
-} */
-
 .cardTerapia{
     height: 100%;
     display: flex !important;
@@ -60,7 +52,7 @@
     padding: 3%;
     border: solid;
     margin: 2px;
-    min-height: 65vh;
+    min-height: 35vw;
     display: flex !important;
     flex-direction: column;
     
@@ -76,12 +68,7 @@
 
 .tituloterapias{
     font-size: 1.5vw;
-    /* margin: 0; */
 }
-
-/* button{
-    font-size: 1.5vw !important;
-} */
 
 .btnModal{
     background-color:#013b23;
